tests/ui/consts/issue-118545.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-118545.rs:4:25
   |
LL | struct Checked<const F: fn()>;
   |                         ^^^^
   |
   = note: the only supported types are integers, `bool` and `char`

error: aborting due to 1 previous error

